# tassh

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: auto-tag.yml  changelog.yml  claude-proactive.yml  claude-self-improve.yml  daemon-mesh-e2e.yml  stale.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-transport/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-display-and-clipboard/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-integration-and-packaging/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md
.planning/phases/05-peer-to-peer-mesh-with-tailscale-auto-discovery-and-ssh-triggered-activation/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-CONTEXT.md  05-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: cli.rs  clipboard.rs  daemon.rs  display.rs  ipc.rs  lib.rs  main.rs  peer.rs  pid_watcher.rs  protocol.rs  setup.rs  transport.rs
tests/: daemon_mesh_e2e.sh  transport_integration.rs
tests/docker/: Dockerfile
