[package]
name = "cssh"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rand = "0.10.0"
socket2 = "0.6.2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
