[package]
name = "tassh"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arboard = { version = "3", features = ["wayland-data-control"] }
async-pidfd = "0.1.5"
clap = { version = "4", features = ["derive", "env"] }
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3", features = ["base64"] }
sha2 = "0.10"
socket2 = "0.6.2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
